# LLM-Gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  desktop.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_seed_model_routes.py
app/: main.py
app/auth/: api_key_auth.py  supabase_jwt.py
app/db/: engine.py  repositories.py  session.py
app/exceptions/: __init__.py  auth.py  base.py  guardrail.py  handlers.py  provider.py  rate_limit.py  routing.py
app/middleware/: cache_lookup.py  cache_store.py  context.py  guardrails.py  observability.py  pipeline.py  provider_caller.py  rate_limiter.py  request_id.py  router.py  token_estimator.py
app/models/: __init__.py  api_key.py  base.py  model_route.py  usage_log.py  user.py
app/providers/: base.py  factory.py  groq.py  nvidia.py  openrouter.py
app/redis_client/: cache.py  circuit_breaker.py  connection.py  rate_limiter.py
app/routes/: __init__.py  admin.py  chat.py  health.py  models_route.py
app/schemas/: admin.py  chat.py  errors.py
app/utils/: hashing.py  logging.py  normalization.py  time.py  token_count.py
config/: __init__.py  providers.py  settings.py
gateway_ui/llm-gateway-frontend/llm-gateway/: .env.example  README.md  index.html  (+4 more)
scripts/: entrypoint.sh  generate_api_key.py  seed_model_routes.py
tests/: conftest.py
tests/integration/: test_admin.py  test_chat_pipeline.py  test_health.py
tests/unit/: test_guardrails.py  test_hashing.py  test_token_estimator.py
(+22 files in other folders)
